functionality form nav have been added

--- a/src/styles/components/nav.less
+++ b/src/styles/components/nav.less
@@ -28,10 +28,11 @@
 
 nav{
     background-color: rgba(53, 63, 70, 0.7);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    
 }
 
 .container__nav{
